--- a/day4/flexwork/index.css
+++ b/day4/flexwork/index.css
@@ -1,55 +1,64 @@
-#container-box{
-border: 2px solid black;
-display:flex;
-flex-direction: row;
-height:250px;
-width:560px;
-gap:4px;
-background-color: antiquewhite  ;
-}
-.box{
+#container-box {
     border: 2px solid black;
-    width:140px;
-    }
-.box:nth-child(1){
-background-color: cornflowerblue;
-display: flex;
-flex-direction: column;
-}
-.box:nth-child(2){
-background-color: chocolate;
-display: flex;
-flex-direction: row;
-}
-.box:nth-child(3){
-background-color: rgb(243, 13, 51);
-display: flex;
-flex-direction: column;
-}
-.box:nth-child(4){
-background-color: green;
-display: flex;
-flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    height: 250px;
+    width: 560px;
+    gap: 4px;
 }
 
-.part{
-    width:auto;
-    height:50%;
+.box {
+    border: 2px solid gray;
+    width: 140px;
+    height: 250px;
+    background-color: antiquewhite;
 }
+.box:hover{
+    cursor: pointer;
+}
+.box:nth-child(1) {
+    background-color: cadetblue;
+    display: flex;
+    flex-direction: column;
+}
+
+.box:nth-child(2) {
+    background-color: chocolate;
+    display: flex;
+    flex-direction: row;
+}
+
+.box:nth-child(3) {
+    background-color: cornflowerblue;
+    display: flex;
+    flex-direction: column;
+}
+
+.box:nth-child(4) {
+    background-color: darkgoldenrod;
+    display: flex;
+    flex-direction: row;
+}
+
 .box:nth-child(1)>div,
-.box:nth-child(3)>div,
-.part{
-    width:auto;
-    height:50%;
-}
-.box:nth-child(2)>div,
-.box:nth-child(4)>div,
-.part{
-    width: 50%;
-    height:auto;
-}
-.img{
-    padding-top: 0px;
+.box:nth-child(3)>div {
+    width: auto;
     height: 50%;
+}
 
+.box:nth-child(2)>div,
+.box:nth-child(4)>div {
+    width: 50%;
+    height: 150px;
+}
+
+.box:nth-child(1)>div>img,
+.box:nth-child(3)>div>img {
+    height: 100px;
+    width: 130px;
+}
+.box:nth-child(2)>div>img,
+.box:nth-child(4)>div>img {
+    height:70px ;
+    width:70px ;
 }
